--- a/Frontend/Szakdolgozat/src/app/menu/menu.component.html
+++ b/Frontend/Szakdolgozat/src/app/menu/menu.component.html
@@ -7,23 +7,24 @@
             <li class="nav-item active">
                 <a class="nav-link" routerLink="work-time">Munkaidő-nyilvántartó</a>
             </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link" routerLink="">Feladatkezelő</a>
-            </li> -->
             <li class="nav-item active">
                 <a class="nav-link" routerLink="holiday">Szabadság tervező</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" routerLink="">Időbeosztás tervező</a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" routerLink="">Listázás</a>
+            <li class="nav-item dropdown active">
+                <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Listázás
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" routerLink="listing-project">Projektek</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" routerLink="listing-holiday">Szabadságok</a>
+                </div>
             </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link" routerLink="">Adminisztráció</a>
-            </li> -->
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item active dropdown">
+                <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Karbantartás
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
