--- a/Frontend/Szakdolgozat/src/app/taskbar/taskbar.component.html
+++ b/Frontend/Szakdolgozat/src/app/taskbar/taskbar.component.html
@@ -1,1 +1,20 @@
-<p>It works</p>
+<div class="w-100 h-100 p-md-2 border-left">
+
+    <button class="btn btn-light w-100">Feladat rögzítése</button>
+
+    <br><br>
+     
+      <table class="table border">
+        <thead class="thead-light border">
+          <tr>
+            <th class="text-center" scope="col">Feladatok</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>asdasds</td>
+          </tr>
+        </tbody>
+      </table>
+
+</div>
