--- a/Frontend/Szakdolgozat/src/app/main-page/main-page.component.html
+++ b/Frontend/Szakdolgozat/src/app/main-page/main-page.component.html
@@ -1,1 +1,4 @@
-<p>main-page works!</p>
+<div class="w-100 h-100">
+    <div class="w-50 h-100 float-left p-md-2">a</div>
+    <div class="w-50 h-100 float-right p-md-2">b</div>
+</div>
