--- a/Frontend/Szakdolgozat/src/app/content/content.component.html
+++ b/Frontend/Szakdolgozat/src/app/content/content.component.html
@@ -3,6 +3,6 @@
         <router-outlet></router-outlet>
     </div>
     <div class="float-right right-content">
-        <app-taskbar></app-taskbar>
+        <app-taskbar *ngIf="authService.getIsLoggedIn()"></app-taskbar>
     </div>
 </div>
