--- a/Frontend/Szakdolgozat/src/app/taskbar/taskbar.component.dialog.html
+++ b/Frontend/Szakdolgozat/src/app/taskbar/taskbar.component.dialog.html
@@ -13,7 +13,7 @@
     <textarea formControlName="msg" class="form-control" aria-label="With textarea"></textarea>
   </div>
   <br>
-  <div class="input-group">
+  <div class="input-group" *ngIf="havePermission('ROLE_ADD_TASK')">
     <div class="input-group-prepend">
       <span class="input-group-text" id="">Felhasználó</span>
     </div>
