--- a/Frontend/Szakdolgozat/src/app/maintenance-user/maintenance-user.component.html
+++ b/Frontend/Szakdolgozat/src/app/maintenance-user/maintenance-user.component.html
@@ -27,7 +27,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">E-mail cím</span>
             </div>
-            <input formControlName="email" type="text" class="form-control">
+            <input formControlName="email" type="email" class="form-control">
         </div>
         <br>
         <div class="input-group">
