--- a/Frontend/Szakdolgozat/src/app/main-page/main-page.component.html
+++ b/Frontend/Szakdolgozat/src/app/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <div class="w-100 h-100">
     <div class="w-100 h-100 float-left p-lg-5">
-        <h2 class="text-center">Üdvözöljük {{ user.lastName }} {{ user.firstName }}</h2>
+        <h2 class="text-center">Üdvözöljük {{ authUser.getUser().lastName }} {{ authUser.getUser().firstName }}</h2>
         <br>
         <br>
         <h4 class="text-center">Szabadságok</h4>
