--- a/Frontend/Szakdolgozat/src/app/menu/menu.component.html
+++ b/Frontend/Szakdolgozat/src/app/menu/menu.component.html
@@ -14,7 +14,7 @@
                 <a class="nav-link" routerLink="holiday">Szabadság tervező</a>
             </li>
             <li *ngIf="authService.getIsLoggedIn()" class="nav-item active">
-                <a class="nav-link" routerLink="">Időbeosztás tervező</a>
+                <a class="nav-link" routerLink="work-time-planner">Időbeosztás tervező</a>
             </li>
             <li *ngIf="authService.getIsLoggedIn() && havePermission('ROLE_LISTING')" class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
